fix the error